[package]
name = "conc"
version = "0.1.2"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "Hazard-pointer-based concurrent memory reclamation."
repository = "https://github.com/ticki/tfs"
documentation = "https://docs.rs/conc"
license = "MIT"
keywords = ["crossbeam", "hazard", "concurrent", "epoch", "gc"]
exclude = ["target", "Cargo.lock"]

[dependencies]
lazy_static = "0.2"
parking_lot = "0.4"
rand = "0.3"
