[package]
name = "conc"
version = "0.5.1"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "Hazard-pointer-based concurrent memory reclamation."
repository = "https://github.com/ticki/tfs"
documentation = "https://docs.rs/conc"
license = "MIT"
keywords = ["crossbeam", "hazard", "concurrent", "stm", "treiber"]
exclude = ["target", "Cargo.lock"]

[dependencies]
lazy_static = "0.2"
rand = "0.3"
parking_lot = "0.4"

[dependencies.backtrace]
version = "0.3"
optional = true

[features]
debug-tools = ["backtrace"]
