[package]
name = "control-flow"
version = "0.1.1"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "A hack to control control-flow outside closures."
repository = "https://github.com/ticki/tfs"
documentation = "https://docs.rs/control-flow"
license = "MIT"
keywords = ["closure", "control", "flow", "macro"]
exclude = ["target", "Cargo.lock"]
