[package]
name = "tfs-core"
version = "0.1.0"
authors = ["ticki <ticki@users.noreply.github.com>"]

[dependencies]
cbloom = "0.1"
crossbeam = "0.2"
futures = "0.1"
little-endian = "1.0"
lz4-compress = "0.1"
mlcr = "0.2"
rand = "0.3"
ring = "0.7"
ring-pwhash = "0.1"
seahash = "3.0"
slog = "1.5"
speck = "1.0"
thread-object = "0.2"
type-name = "0.1"

[features]
security = []
