[package]
name = "tm"
version = "0.1.0"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "Simple sooftare transactional memory."
repository = "https://github.com/ticki/tfs"
documentation = "https://docs.rs/tm"
license = "MIT"
keywords = ["tm", "stm", "htm", "transactional", "memory"]
exclude = ["target", "Cargo.lock"]

[dependencies]
crossbeam = "0.2"
